endpoint url fix
